correct eq() method for Item_param (BUG#4233)