sql/item.h
@@ -525,6 +525,8 @@ public:
   virtual table_map used_tables() const
   { return state != NO_VALUE ? (table_map)0 : PARAM_TABLE_BIT; }
   void print(String *str) { str->append('?'); }
+  /* parameter never equal to other parameter of other item */
+  bool eq(const Item *item, bool binary_cmp) const { return 0; }
 };
 
 class Item_int :public Item_num
